[ui] User wants flash messages fixed to top of window, in order to prevent the contents shifting (when the flash goes away) possibly clicking on the wrong thing.      https://trello.com/c/PzFZE7dG

--- a/ui/app/styles/app.scss
+++ b/ui/app/styles/app.scss
@@ -78,3 +78,12 @@ img {
   margin-bottom: 0;
   padding-top: 7px;
 }
+
+.alert-fixed {
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index:9999;
+  border-radius:0;
+}
